feat: add ticket printing format capability
add k8s deployment descriptors